# fpcpp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  fp.h  function_trait.h  main.cpp  pipe.h  splitkeywords.cpp  stringutils.h
examples/: CMakeLists.txt  curry.cpp  pipe.cpp  splitkeywords.cpp
include/: fpcpp.h
include/fpcpp/: common.h  cpp17.h  curry.h  function.h  function_trait.h  list.h  logic.h  math.h  placeholder.h  string.h
tests/: CMakeLists.txt  F.cpp  T.cpp  add.cpp  all.cpp  always.cpp  any.cpp  both.cpp  complement.cpp  curry.cpp  divide.cpp  equals.cpp  filter.cpp  gt.cpp  gte.cpp  identity.cpp  is_empty.cpp  lt.cpp  lte.cpp  map.cpp  multiply.cpp  not.cpp  pipe.cpp  reduce.cpp  reject.cpp  split.cpp  subtract.cpp  tap.cpp  trim.cpp
